Fixed text wrapping on search results

--- a/491project/src/App.css
+++ b/491project/src/App.css
@@ -251,8 +251,20 @@ div.content {
     text-decoration: none;
     font-weight: 600;
     cursor: pointer;
-    height: 60px;
+    height: 70px;
+    position: relative;
 }
+
+.sidebar .search-results-inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    margin-left: 5px;
+    margin-top: -15px;
+    height: 70px;
+}
+
 
 .sidebar .search-results:hover {
     color: var(--darkPrimaryText);
@@ -1115,6 +1127,11 @@ div.content {
     .sidebar a {
         text-align: center;
         float: none;
+    }
+    .sidebar .search-results-inner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     
     div.content {margin-left: 0;}   
